{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 20,
  "lineage": "57b1d40e-36f5-84d7-b8c9-76c173b89cca",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c1e832407373333f",
            "arn": "arn:aws:ec2:us-west-1:343664323008:instance/i-0abe226ee058be901",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0abe226ee058be901",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0702d1c98bc57a760",
            "private_dns": "ip-10-0-1-31.us-west-1.compute.internal",
            "private_ip": "10.0.1.31",
            "public_dns": "ec2-18-144-7-174.us-west-1.compute.amazonaws.com",
            "public_ip": "18.144.7.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0129d08572117d8e4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0da27ddfffe7e5a32",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-023967b284d3d6834"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykey",
            "aws_security_group.allow-ssh",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:343664323008:internet-gateway/igw-0d609dd6cb69f1966",
            "id": "igw-0d609dd6cb69f1966",
            "owner_id": "343664323008",
            "tags": {
              "Name": "main-gw"
            },
            "vpc_id": "vpc-0d08bd588343e1eff"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "gw-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07350c9786a65e1bb",
            "owner_id": "343664323008",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d609dd6cb69f1966",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0d08bd588343e1eff"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006da408f95594a2f",
            "route_table_id": "rtb-07350c9786a65e1bb",
            "subnet_id": "subnet-0da27ddfffe7e5a32"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.gw-public",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00bd4880499be76f5",
            "route_table_id": "rtb-07350c9786a65e1bb",
            "subnet_id": "subnet-0732534900d7ab7b2"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.gw-public",
            "aws_subnet.main-public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-mariadb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:343664323008:security-group/sg-0a250994523fb7a90",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a250994523fb7a90",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-023967b284d3d6834"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow-mariadb",
            "name_prefix": null,
            "owner_id": "343664323008",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-mariadb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d08bd588343e1eff"
          },
          "dependencies": [
            "aws_security_group.allow-ssh",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:343664323008:security-group/sg-023967b284d3d6834",
            "description": "allow-ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-023967b284d3d6834",
            "ingress": [
              {
                "cidr_blocks": [
                  "200.59.126.59/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": null,
            "owner_id": "343664323008",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d08bd588343e1eff"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:343664323008:subnet/subnet-09af1359e7d887149",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-09af1359e7d887149",
            "map_public_ip_on_launch": false,
            "owner_id": "343664323008",
            "tags": {
              "Name": "priv1"
            },
            "vpc_id": "vpc-0d08bd588343e1eff"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:343664323008:subnet/subnet-0c08b7bbe064a6077",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0c08b7bbe064a6077",
            "map_public_ip_on_launch": false,
            "owner_id": "343664323008",
            "tags": {
              "Name": "priv2"
            },
            "vpc_id": "vpc-0d08bd588343e1eff"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:343664323008:subnet/subnet-0da27ddfffe7e5a32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0da27ddfffe7e5a32",
            "map_public_ip_on_launch": true,
            "owner_id": "343664323008",
            "tags": {
              "Name": "pub1"
            },
            "vpc_id": "vpc-0d08bd588343e1eff"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:343664323008:subnet/subnet-0732534900d7ab7b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0732534900d7ab7b2",
            "map_public_ip_on_launch": true,
            "owner_id": "343664323008",
            "tags": {
              "Name": "pub2"
            },
            "vpc_id": "vpc-0d08bd588343e1eff"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:343664323008:vpc/vpc-0d08bd588343e1eff",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09075346076a16bf7",
            "default_route_table_id": "rtb-00f276fd0eaadbe8a",
            "default_security_group_id": "sg-09716199d70ce1458",
            "dhcp_options_id": "dopt-193edf7f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d08bd588343e1eff",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00f276fd0eaadbe8a",
            "owner_id": "343664323008",
            "tags": {
              "Name": "main vpc"
            }
          }
        }
      ]
    }
  ]
}